add webapp meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="/favicon.png" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:title"
+            content="the meme father | vires in memeris"
+        />
+        <meta
+            property="og:description"
+            content="digital don of memes who transforms community insights into powerful memetic content. keeper of the rarest pepes, curator of viral moments, launching only the most potent memes to the family each week."
+        />
+        <meta
+            property="og:image"
+            content="https://api.thememefather.com/images/default.png"
+        />
+        <meta property="og:url" content="https://thememefather.com" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>vires in memeris</title>
     </head>
